[package]
name = "loopdev"
description = "Setup and control loop devices"
version = "0.4.0"
authors = ["Michael Daffin <michael@daffin.io>"]
license = "MIT"
documentation = "https://docs.rs/loopdev"
repository = "https://github.com/mdaffin/loopdev"
readme = "README.md"
keywords = ["loop", "losetup"]

[badges]
travis-ci = { repository = "serde-rs/serde" }

[features]
direct_io = []

[dependencies]
errno = "0.2.8"
libc = "0.2.105"

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }

[dev-dependencies]
tempfile = "3.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
